2005-11-29  Stipe Tolj  <stolj at kannel.org>
   * Makefile.in: adding 'install' target components for wap library, including
     heaeders. Mainly this is a sync towards compatibility needs from Mbuni
     MMS gateway project.

2005-11-11  Alexander Malysh <amalysh at kannel.org>
   * gwlib/counter.c: allow calling counter_destroy with a NULL just for 
     convenience.

2005-11-11  Alexander Malysh <amalysh at kannel.org>
   * gw/bb_store.c: fixed race condition when dumping into the new file but in
     the meantime some messages will be already stored in the Dictionary. 
     Generally means: synchronize file and Dictionary contents. Fixed bug #248.
   * gw/bearerbox.c: added panic for the case store_init call fail.

2005-11-10  Stipe Tolj  <stolj at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gwlib/cfg.def: veto'ed 
     against naming convention for the 2 new config directives and changed them
     to 'sms-resend-freq' and 'sms-resend-retry'.
   
2005-11-09  Stipe Tolj  <stolj@wapme-group.de>
   * doc/userguide/userguide.xml: fixing default values for parameters within
     the user's guide. Thanks to Dziugas Baltrunas <dziugas@gmail.com> for this.
     [Msg-Id: <943470880511081236t74d1556me79aa8611611115b@mail.gmail.com>]

2005-11-08  Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/msg-decl.h,
     gwlib/cfg.def: Applied patch that adds configurable max retries and
     resend frequency for the temporarily failed messages to the core.

2005-11-04  Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_smpp.c: fixed memory leak in SMPP DLR handling. Bug #265.
     Thanks to "ungod" for reporting this.

2005-11-03  Stipe Tolj  <stolj@wapme-group.de>
   * configure[.in]: fixing mysql section for the sake of sparc-solaris-10. 
     Thanks to David Chkhartishvili <datoch@magtigsm.ge> for reporting this.
     [Msg-Id: <4365C800.4080402@magtigsm.ge>]
