@@ -55,10 +55,10 @@
  */ 
 
 /*
-* radius_acct.c - RADIUS accounting proxy thread
-*
-* Stipe Tolj <stolj@wapme.de>
-*/
+ * radius_acct.c - RADIUS accounting proxy thread
+ *
+ * Stipe Tolj <stolj@kannel.org>
+ */
 
 #include <string.h>
 #include <fcntl.h>
@@ -94,6 +94,9 @@ static Octstr *secret_radius = NULL;
 
 /* the global unified-prefix list */
 static Octstr *unified_prefix = NULL;
+
+/* timeout in msec for the remote RADIUS responses */
+static long remote_timeout = 40000;
 
 /*************************************************************************
  *
@@ -220,9 +223,12 @@ static void proxy_thread(void *arg)
     run_thread = 1;
     ss = cs = -1;
 
-    /* create client binding, only if we have a remote server */
+    /* create client binding, only if we have a remote server
+     * and make the client socet non-blocking */
     if (remote_host != NULL) {
         cs = udp_client_socket();
+        fl = fcntl(cs, F_GETFL);
+        fcntl(cs, F_SETFL, fl | O_NONBLOCK);
         addr = udp_create_address(remote_host, remote_port);
     }
 
@@ -306,7 +312,12 @@ static void proxy_thread(void *arg)
             if (udp_sendto(cs, data, addr) == -1) {
                 error(0, "RADIUS: Couldn't send to remote RADIUS <%s:%ld>.",
                       octstr_get_cstr(remote_host), remote_port);
-            } else if (udp_recvfrom(cs, &data, &from_radius) == -1) {
+            } else 
+            if (read_available(cs, remote_timeout) < 1) {
+                error(0, "RADIUS: Timeout for response from remote RADIUS <%s:%d>.",
+                      octstr_get_cstr(remote_host), remote_port);
+            } else 
+            if (udp_recvfrom(cs, &data, &from_radius) == -1) {
                 error(0, "RADIUS: Couldn't receive from remote RADIUS <%s:%ld>.",
                       octstr_get_cstr(remote_host), remote_port);
             } else {
@@ -385,6 +396,7 @@ void radius_acct_init(CfgGroup *grp)
         }
     }
     cfg_get_integer(&our_port, grp, octstr_imm("our-port"));
+    cfg_get_integer(&remote_timeout, grp, octstr_imm("remote-timeout"));
 
     if ((cfg_get_integer(&nas_ports, grp, octstr_imm("nas-ports"))) == -1) {
         nas_ports = RADIUS_NAS_PORTS;
